<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PawPaw</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <string name="itemHome">Home</string>
    <string name="itemMyProfile">My Profile</string>
    <string name="itemMypet">My Pet</string>
    <string name="itemSettings">Settings</string>
    <string name="itemLogout">Logout</string>

    <string name="stringTxtViewWelcomeNote">Welcome Back!!</string>
    <string name="stringBtnBookAppt">Book Appointment</string>
    <string name="stringTxtViewBookAppt">Select the Date</string>
    <string name="stringEditTimeBookAppt">Start Time</string>
    <string name="stringTxtViewAvblSlotsBookAppt">Available Slots</string>
    <string name="stringBtnBookApptToCheckOutActivity">Check Out</string>
    <string name="stringBtnCheckHistory">History</string>
    <string name="stringtxtViewPetInfo">My Pets</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_maps_booking">MapsActivityBooking</string>
    <string name="stringBtnDownloadPdf">Download PDF</string>
    <string name="txtBottomNav1">Pets</string>
    <string name="txtBottomNav2">Home</string>
    <string name="txtBottomNav3">Book</string>
    <string name="btnLogout">Logout</string>
    <string name="stringBtnPay">Pay</string>
    <string name="premium_pkg">Premium Package ($90)</string>
    <string name="basic_pkg">Basic Package ($65)</string>
    <string name="lblPaymentStatus">Unpaid</string>

</resources>