<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/itemHome"/>

        <item
            android:id="@+id/nav_myProfile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/itemMyProfile" />

        <item
            android:id="@+id/nav_mypet"
            android:icon="@drawable/baseline_pets_24"
            android:title= "@string/itemMypet" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/itemSettings" />

    </group>

        <item
            android:title="">

            <menu>
                <group
                    android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/itemLogout" />
                </group>
            </menu>

        </item>
</menu>