<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BookAppointmentActivity">


    <TextView
        android:id="@+id/txtViewTitleBookAppt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/stringTxtViewBookAppt"
        android:textStyle="bold" />

    <CalendarView
        android:id="@+id/calendarViewBookAppt"
        android:layout_width="371dp"
        android:layout_height="359dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="60dp" />

    <RadioGroup
        android:id="@+id/rdioGrpBookAppt"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="430dp">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RadioButton" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtViewAvblSlotsBookAppt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="400dp"
        android:text="@string/stringTxtViewAvblSlotsBookAppt" />

    <Button
        android:id="@+id/btnBookApptToCheckOutActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="570dp"
        android:text="@string/stringBtnBookApptToCheckOutActivity" />

    <Button
        android:id="@+id/btnTestingMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Map Testing" />

    <include layout="@layout/navigation_bar"/> <!--this can be deleted if we don't need the bottom nav bar in this activity-->


</RelativeLayout>